--- a/scss/partials/_settings.colours.scss
+++ b/scss/partials/_settings.colours.scss
@@ -1,10 +1,55 @@
 /** Colours*/
-$OHGreen: #637329;
-$OHLightGreen: #A6CA44;
-$OHPaleGreen: #CEE0A5;
-$OHDarkGreen: #374017;
-$OHDarkGrey: #0D0D0D;
-$OHGrey: #262627;
-$OHWhite: #fff;
-$OHRed: #BF3434;
-$OHBlack: #000000;
+/* SCSS HEX */
+$tomato-jam: #B83534ff;
+$yale-blue: #1A455Dff;
+$bright-snow: #FAFAF9ff;
+$bone: #DBD0C0ff;
+$pacific-cyan: #578E9Eff;
+$royal-gold: #FCDF58ff;
+$tomato-jam-light: rgb(236, 109, 109);
+
+
+// /* CSS HEX */
+// --tomato-jam: #B83534ff;
+// --yale-blue: #1A455Dff;
+// --bright-snow: #FAFAF9ff;
+// --bone: #DBD0C0ff;
+// --pacific-cyan: #578E9Eff;
+// --royal-gold: #FCDF58ff;
+
+// /* CSS HSL */
+// --tomato-jam: hsla(0, 56%, 46%, 1);
+// --yale-blue: hsla(201, 56%, 23%, 1);
+// --bright-snow: hsla(60, 9%, 98%, 1);
+// --bone: hsla(36, 27%, 81%, 1);
+// --pacific-cyan: hsla(194, 29%, 48%, 1);
+// --royal-gold: hsla(49, 96%, 67%, 1);
+
+
+
+// /* SCSS HSL */
+// $tomato-jam: hsla(0, 56%, 46%, 1);
+// $yale-blue: hsla(201, 56%, 23%, 1);
+// $bright-snow: hsla(60, 9%, 98%, 1);
+// $bone: hsla(36, 27%, 81%, 1);
+// $pacific-cyan: hsla(194, 29%, 48%, 1);
+// $royal-gold: hsla(49, 96%, 67%, 1);
+
+// /* SCSS RGB */
+// $tomato-jam: rgba(184, 53, 52, 1);
+// $yale-blue: rgba(26, 69, 93, 1);
+// $bright-snow: rgba(250, 250, 249, 1);
+// $bone: rgba(219, 208, 192, 1);
+// $pacific-cyan: rgba(87, 142, 158, 1);
+// $royal-gold: rgba(252, 223, 88, 1);
+
+/* SCSS Gradient */
+$gradient-top: linear-gradient(0deg, #B83534ff, #1A455Dff, #FAFAF9ff, #DBD0C0ff, #578E9Eff, #FCDF58ff);
+$gradient-right: linear-gradient(90deg, #B83534ff, #1A455Dff, #FAFAF9ff, #DBD0C0ff, #578E9Eff, #FCDF58ff);
+$gradient-bottom: linear-gradient(180deg, #B83534ff, #1A455Dff, #FAFAF9ff, #DBD0C0ff, #578E9Eff, #FCDF58ff);
+$gradient-left: linear-gradient(270deg, #B83534ff, #1A455Dff, #FAFAF9ff, #DBD0C0ff, #578E9Eff, #FCDF58ff);
+$gradient-top-right: linear-gradient(45deg, #B83534ff, #1A455Dff, #FAFAF9ff, #DBD0C0ff, #578E9Eff, #FCDF58ff);
+$gradient-bottom-right: linear-gradient(135deg, #B83534ff, #1A455Dff, #FAFAF9ff, #DBD0C0ff, #578E9Eff, #FCDF58ff);
+$gradient-top-left: linear-gradient(225deg, #B83534ff, #1A455Dff, #FAFAF9ff, #DBD0C0ff, #578E9Eff, #FCDF58ff);
+$gradient-bottom-left: linear-gradient(315deg, #B83534ff, #1A455Dff, #FAFAF9ff, #DBD0C0ff, #578E9Eff, #FCDF58ff);
+$gradient-radial: radial-gradient(#B83534ff, #1A455Dff, #FAFAF9ff, #DBD0C0ff, #578E9Eff, #FCDF58ff);
