--- a/scss/partials/elements/_element.buttons.scss
+++ b/scss/partials/elements/_element.buttons.scss
@@ -6,8 +6,22 @@
     border-radius: $borderRadius;
     text-transform: uppercase;
     font-family: $font-family;
-    font-weight: 700;
+    font-weight: 500;
     text-align: center;
     padding: 0.5rem 1.25rem !important;
     box-shadow: 7px 7px 0 -3px #0D0D0D !important;
+    text-decoration: none;
+    border: 1px solid $yale-blue;
+    &__hot-cta {
+        background-color: $tomato-jam;
+        &:hover {
+            background-color: $tomato-jam-light;
+        }
+    }
+    &__cta {
+        background-color: $yale-blue;
+        &:hover {
+            background-color: $pacific-cyan;
+        }
+    }
 }
