--- a/scss/partials/_elements.all.scss
+++ b/scss/partials/_elements.all.scss
@@ -3,5 +3,6 @@
 // @import "elements/element.text";
 @import "elements/element.headings";
 @import "elements/element.buttons";
+@import "elements/element.shadowbox";
 // @import "elements/element.forms";
 // @import "elements/element.slides";
