--- a/style.css
+++ b/style.css
@@ -1174,6 +1174,10 @@ http://shouldiprefix.com/#filters
 /** Navigation style */
 .header__top-bar {
   display: none;
+  height: 45px;
+  padding-top: 0.5rem;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 @media screen and (min-width: 768px) {
   .header__top-bar {
@@ -1254,6 +1258,11 @@ http://shouldiprefix.com/#filters
 }
 .btn__cta:hover {
   background-color: #578e9e;
+}
+
+/** Shadowbox style */
+.shadowbox {
+  box-shadow: 5px 2px 2px #dbd0c0;
 }
 
 /*# sourceMappingURL=style.css.map */
