--- a/scss/partials/elements/_element.buttons.scss
+++ b/scss/partials/elements/_element.buttons.scss
@@ -12,6 +12,7 @@
     box-shadow: 7px 7px 0 -3px #0D0D0D !important;
     text-decoration: none;
     border: 1px solid $yale-blue;
+    height: 40px;
     &__hot-cta {
         background-color: $tomato-jam;
         &:hover {
