--- a/style.css
+++ b/style.css
@@ -1175,15 +1175,48 @@ http://shouldiprefix.com/#filters
 .header__top-bar {
   display: none;
   height: 45px;
-  padding-top: 0.5rem;
   padding-left: 2%;
   padding-right: 2%;
+  align-items: center;
 }
 @media screen and (min-width: 768px) {
   .header__top-bar {
     display: flex;
     justify-content: space-between;
   }
+}
+.header__top-bar--social-media a, .header__top-bar--primary a {
+  text-decoration: none;
+  color: #1a455d;
+  margin-right: 0.85rem;
+  font-size: 1.35rem;
+}
+.header__top-bar--social-media a:hover, .header__top-bar--primary a:hover {
+  color: #b83534;
+}
+.header__top-bar--ctas {
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.mobile-navigation {
+  font-size: 1.35rem;
+  padding-left: 5%;
+  width: 90%;
+}
+@media screen and (min-width: 768px) {
+  .mobile-navigation {
+    display: none;
+  }
+}
+.mobile-navigation a {
+  text-decoration: none;
+  color: #1a455d;
+  margin-right: 0.85rem;
+}
+.mobile-navigation a:hover {
+  color: #b83534;
 }
 
 /** Header styles */
@@ -1246,6 +1279,7 @@ http://shouldiprefix.com/#filters
   box-shadow: 7px 7px 0 -3px #0D0D0D !important;
   text-decoration: none;
   border: 1px solid #1a455d;
+  height: 40px;
 }
 .btn__hot-cta {
   background-color: #b83534;
@@ -1263,6 +1297,40 @@ http://shouldiprefix.com/#filters
 /** Shadowbox style */
 .shadowbox {
   box-shadow: 5px 2px 2px #dbd0c0;
+}
+
+/** Forms styles */
+form {
+  background-color: #dbd0c0;
+  border-radius: 0.1875rem;
+  border: 1px solid #1a455d;
+  width: 95%;
+  margin: 0 auto;
+  padding: 2%;
+  font-size: 1.25rem;
+  max-width: 729px;
+}
+form label {
+  display: block;
+}
+form input {
+  width: 100%;
+  border: 1px solid #578e9e;
+  border-radius: 0.1875rem;
+}
+form input[type=submit] {
+  width: auto;
+  padding: 5px 8px;
+  background-color: #fcdf58;
+  display: block;
+  border: 1px solid #578e9e;
+  border-radius: 0.1875rem;
+  margin-top: 0.5rem;
+}
+form input[type=radio] {
+  display: inline;
+  width: 10%;
+  text-align: left;
 }
 
 /*# sourceMappingURL=style.css.map */
