--- a/scss/partials/_elements.all.scss
+++ b/scss/partials/_elements.all.scss
@@ -4,5 +4,5 @@
 @import "elements/element.headings";
 @import "elements/element.buttons";
 @import "elements/element.shadowbox";
-// @import "elements/element.forms";
+@import "elements/element.forms";
 // @import "elements/element.slides";
